--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "axios": "^0.20.0",
+    "paystack": "^2.0.1",
     "pg": "^8.3.3"
   },
   "devDependencies": {},
